--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
     <h1>Photo Gallery</h1>
-    <h2>Enter the number of photos</h2>
+    <h2>Enter the number of photrereos</h2>
     <input type="number" id="input" class="input" value="0" min="1" max="10">
     <small class ="errorMessage" id = "errorMessage">Error message</small>
     <button class="btn" id="btn">Get Photo</button>
